src/objects/Apttus_Config2__BillingPlanTemplateItem__c.object
<CustomObject>
    <description>Represents an entry in a billing plan template</description>
    <fields>
        <fullName>Apttus_Config2__BillingPlanTemplateId__c</fullName>
        <description>ID of the associated billing plan template</description>
        <inlineHelpText>ID of the associated billing plan template</inlineHelpText>
        <label>Billing Plan Template</label>
        <referenceTo>Apttus_Config2__BillingPlanTemplate__c</referenceTo>
        <relationshipLabel>Billing Plan Template Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OffsetType__c</fullName>
        <description>Indicates which type of value will be used to calculate the time between billing periods.</description>
        <inlineHelpText>Indicates which type of value will be used to calculate the time between billing periods.</inlineHelpText>
        <label>Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Offset__c</fullName>
        <description>The offset value used to calculate the time between billing periods.</description>
        <inlineHelpText>The offset value used to calculate the time between billing periods.</inlineHelpText>
        <label>Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the template plan item</description>
        <inlineHelpText>ID of the payment term associated with the template plan item</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Billing Plan Template Items</relationshipLabel>
        <relationshipName>BillingPlanTemplateItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Percent__c</fullName>
        <description>The billing amount expressed as a percentage</description>
        <inlineHelpText>The billing amount expressed as a percentage</inlineHelpText>
        <label>Percent</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PlanItemName__c</fullName>
        <description>The template plan item name</description>
        <inlineHelpText>The template plan item name</inlineHelpText>
        <label>Plan Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing Plan Template Item</label>
    <nameField>
        <displayFormat>TI-{00000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plan Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>